--- a/live.html
+++ b/live.html
@@ -3,68 +3,64 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>India vs Pakistan — Live Player</title>
+  <title>Live Sports — Hindi</title>
 
   <!-- HLS.js -->
   <script src="https://cdn.jsdelivr.net/npm/hls.js@1.4.0/dist/hls.min.js"></script>
 
   <style>
-    :root{
-      --bg:#071126;
-      --card:#081827;
-      --muted:#8fb0c9;
-      --accent:#00d1ff;
-      --accent-2:#00ffa6;
+    :root {
+      --bg: #0a0d14;
+      --primary: #e50914;
+      --text: #ffffff;
+      --muted: #9aa3b2;
     }
-    body{
-      margin:0;
-      font-family: Arial, sans-serif;
-      background:linear-gradient(180deg,var(--bg),#02101a);
-      color:#fff;
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background: var(--bg);
+      color: var(--text);
     }
-    .app{
-      max-width:1200px;
-      margin:20px auto;
-      padding:20px;
+    header {
+      text-align: center;
+      padding: 15px;
+      font-size: 22px;
+      font-weight: bold;
+      background: var(--primary);
     }
-    .player-card{
-      background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-      border-radius:12px;
-      padding:15px;
-      box-shadow:0 6px 30px rgba(0,0,0,0.6);
-      border:1px solid rgba(255,255,255,0.03);
+    .app {
+      max-width: 1000px;
+      margin: 20px auto;
+      padding: 10px;
     }
-    .video-wrap{
-      position:relative;
-      border-radius:10px;
-      overflow:hidden;
-      background:#000;
+    .video-wrap {
+      position: relative;
+      border-radius: 10px;
+      overflow: hidden;
+      background: #000;
+      box-shadow: 0 4px 25px rgba(0,0,0,0.6);
     }
-    video{
-      width:100%;
-      height:auto;
-      display:block;
-      background:#000;
+    video {
+      width: 100%;
+      height: auto;
+      display: block;
+      background: #000;
     }
-    .loading{
+    .loading {
       position:absolute;
-      top:0;
-      left:0;
-      right:0;
-      bottom:0;
+      top:0;left:0;right:0;bottom:0;
       display:flex;
       flex-direction:column;
       align-items:center;
       justify-content:center;
-      background:rgba(0,0,0,0.8);
-      color:var(--accent);
-      font-size:22px;
+      background:rgba(0,0,0,0.85);
+      color:var(--primary);
+      font-size:20px;
       font-weight:bold;
       animation: pulse 1.5s infinite;
     }
-    .loading img{
+    .loading img {
       width:60px;
-      height:60px;
       margin-bottom:10px;
     }
     @keyframes pulse {
@@ -72,149 +68,124 @@
       50%{opacity:1;}
       100%{opacity:0.3;}
     }
-    .controls-row{
+    .controls {
       display:flex;
-      justify-content:space-between;
-      margin-top:12px;
-      flex-wrap:wrap;
-      gap:10px;
+      justify-content:center;
+      gap:12px;
+      margin:15px 0;
     }
-    select{
-      padding:8px 10px;
-      border-radius:6px;
+    .btn {
+      padding:10px 20px;
       border:none;
+      border-radius:30px;
       cursor:pointer;
-      background:#222;
+      font-weight:bold;
       color:#fff;
+      background:#1c1f29;
+      transition:all 0.2s;
     }
-    .reco{
+    .btn.active {
+      background: var(--primary);
+    }
+    .btn:hover {
+      transform: scale(1.05);
+    }
+    .reco {
       margin-top:25px;
     }
-    .reco h3{margin:0 0 12px;font-size:20px;}
-    .reco-list{
+    .reco h3 {
+      margin-bottom:12px;
+      font-size:18px;
+    }
+    .reco-list {
       display:grid;
       grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-      gap:15px;
+      gap:12px;
     }
-    .reco-card{
-      background:var(--card);
-      border-radius:10px;
+    .reco-card {
+      background:#1c1f29;
+      border-radius:8px;
       overflow:hidden;
-      border:1px solid rgba(255,255,255,0.05);
-      transition:transform 0.2s;
       cursor:pointer;
+      transition:transform 0.2s;
     }
-    .reco-card:hover{transform:scale(1.03);}
-    .reco-card img{width:100%;display:block;}
-    .reco-card .title{padding:10px;font-weight:bold;font-size:15px;}
-    .footer{text-align:center;margin-top:20px;font-size:14px;color:var(--muted);}
-    .tg-btn{
+    .reco-card:hover {transform:scale(1.03);}
+    .reco-card img {width:100%;display:block;}
+    .reco-card .title {
+      padding:8px;
+      font-weight:bold;
+      font-size:14px;
+    }
+    footer {
+      text-align:center;
+      margin:25px 0;
+      font-size:14px;
+      color:var(--muted);
+    }
+    .tg-btn {
       display:inline-flex;
       align-items:center;
       gap:8px;
-      background:#0088cc;
+      background: var(--primary);
       color:#fff;
       padding:10px 16px;
       border-radius:30px;
       font-weight:bold;
       text-decoration:none;
-      transition:background 0.3s;
     }
-    .tg-btn:hover{background:#00a6ff;}
-    .tg-btn img{width:22px;height:22px;}
+    .tg-btn img {width:20px;height:20px;}
   </style>
 </head>
 <body>
+  <header>Live Sports — Hindi</header>
   <div class="app">
-    <div class="player-card">
-      <h2>India vs Pakistan</h2>
-      <div class="video-wrap">
-        <video id="video" poster="https://i.ibb.co/TM7kG9p4/x.jpg" controls playsinline></video>
-        <div class="loading" id="loading">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
-          apkmodderkings
-        </div>
+    <div class="video-wrap">
+      <video id="video" poster="https://i.ibb.co/Rp8b3Hrj/x.jpg" controls playsinline></video>
+      <div class="loading" id="loading">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
+        Loading...
       </div>
-      <div class="controls-row">
-        <label>
-          Language:
-          <select id="langSelect">
-            <option value="en" selected>English</option>
-            <option value="hi">Hindi</option>
-          </select>
-        </label>
-        <label>
-          Quality:
-          <select id="qualitySelect">
-            <option value="1080">1080p</option>
-            <option value="720">720p</option>
-            <option value="360">360p</option>
-          </select>
-        </label>
-      </div>
+    </div>
+
+    <div class="controls">
+      <button class="btn active" onclick="playStream('1080')">Hindi 1080p</button>
+      <button class="btn" onclick="playStream('720')">Hindi 720p</button>
     </div>
 
     <div class="reco">
-      <h3>Recommended Streams</h3>
+      <h3>Recommended</h3>
       <div class="reco-list">
-        <div class="reco-card" onclick="playStream('en','1080')">
-          <img src="https://i.ibb.co/TM7kG9p4/x.jpg" alt="Poster">
-          <div class="title">India vs Pakistan — English 1080p</div>
+        <div class="reco-card" onclick="playStream('1080')">
+          <img src="https://i.ibb.co/Rp8b3Hrj/x.jpg" alt="Poster">
+          <div class="title">Hindi — 1080p</div>
         </div>
-        <div class="reco-card" onclick="playStream('en','720')">
-          <img src="https://i.ibb.co/TM7kG9p4/x.jpg" alt="Poster">
-          <div class="title">India vs Pakistan — English 720p</div>
-        </div>
-        <div class="reco-card" onclick="playStream('en','360')">
-          <img src="https://i.ibb.co/TM7kG9p4/x.jpg" alt="Poster">
-          <div class="title">India vs Pakistan — English 360p</div>
-        </div>
-        <div class="reco-card" onclick="playStream('hi','1080')">
-          <img src="https://i.ibb.co/TM7kG9p4/x.jpg" alt="Poster">
-          <div class="title">India vs Pakistan — Hindi 1080p</div>
-        </div>
-        <div class="reco-card" onclick="playStream('hi','720')">
-          <img src="https://i.ibb.co/TM7kG9p4/x.jpg" alt="Poster">
-          <div class="title">India vs Pakistan — Hindi 720p</div>
-        </div>
-        <div class="reco-card" onclick="playStream('hi','360')">
-          <img src="https://i.ibb.co/TM7kG9p4/x.jpg" alt="Poster">
-          <div class="title">India vs Pakistan — Hindi 360p</div>
+        <div class="reco-card" onclick="playStream('720')">
+          <img src="https://i.ibb.co/Rp8b3Hrj/x.jpg" alt="Poster">
+          <div class="title">Hindi — 720p</div>
         </div>
       </div>
     </div>
 
-    <div class="footer">
+    <footer>
       <a href="https://telegram.me/apkmodderkings" target="_blank" class="tg-btn">
         <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
         Join Telegram
       </a>
-    </div>
+    </footer>
   </div>
 
   <script>
     const streams = {
-      en: {
-        "360": "https://tataplay.slivcdn.com/hls/live/2011747-b/TEN1HD/hdntl=exp=1757505691~acl=%2f*~id=81516335-f3df-4265-bf99-e76c7b3acf54~data=hdntl~hmac=59dbbd284ef71a4c4bc8fdd708e96929c8c95e1bebecf2ed44bdf4aeb988cae4/master_664.m3u8",
-        "720": "https://tataplay.slivcdn.com/hls/live/2011747-b/TEN1HD/hdntl=exp=1757505691~acl=%2f*~id=81516335-f3df-4265-bf99-e76c7b3acf54~data=hdntl~hmac=59dbbd284ef71a4c4bc8fdd708e96929c8c95e1bebecf2ed44bdf4aeb988cae4/master_1300.m3u8",
-        "1080":"https://tataplay.slivcdn.com/hls/live/2011747-b/TEN1HD/hdntl=exp=1757505691~acl=%2f*~id=81516335-f3df-4265-bf99-e76c7b3acf54~data=hdntl~hmac=59dbbd284ef71a4c4bc8fdd708e96929c8c95e1bebecf2ed44bdf4aeb988cae4/master_3500.m3u8"
-      },
-      hi: {
-        "360": "https://tataplay.slivcdn.com/hls/live/2020591-b/TEN3HD/hdntl=exp=1757505691~acl=%2f*~id=81516335-f3df-4265-bf99-e76c7b3acf54~data=hdntl~hmac=59dbbd284ef71a4c4bc8fdd708e96929c8c95e1bebecf2ed44bdf4aeb988cae4/master_664.m3u8",
-        "720": "https://tataplay.slivcdn.com/hls/live/2020591-b/TEN3HD/hdntl=exp=1757505691~acl=%2f*~id=81516335-f3df-4265-bf99-e76c7b3acf54~data=hdntl~hmac=59dbbd284ef71a4c4bc8fdd708e96929c8c95e1bebecf2ed44bdf4aeb988cae4/master_1300.m3u8",
-        "1080":"https://tataplay.slivcdn.com/hls/live/2020591-b/TEN3HD/hdntl=exp=1757505691~acl=%2f*~id=81516335-f3df-4265-bf99-e76c7b3acf54~data=hdntl~hmac=59dbbd284ef71a4c4bc8fdd708e96929c8c95e1bebecf2ed44bdf4aeb988cae4/master_3500.m3u8"
-      }
+      "1080": "https://in-mc-fdlive.fancode.com/mumbai/136742_hindi_hls_03dea3461951169adfreeta-di_h264/1080p.m3u8",
+      "720":  "https://in-mc-fdlive.fancode.com/mumbai/136742_hindi_hls_03dea3461951169adfreeta-di_h264/720p.m3u8"
     };
 
     const video = document.getElementById('video');
     const loading = document.getElementById('loading');
-    const langSelect = document.getElementById('langSelect');
-    const qualitySelect = document.getElementById('qualitySelect');
-    let currentLang = 'en';
     let currentQuality = '1080';
 
-    function loadStream(lang, quality){
-      const url = streams[lang][quality];
+    function loadStream(quality){
+      const url = streams[quality];
       loading.style.display = "flex";
       if (video.canPlayType('application/vnd.apple.mpegurl')) {
         video.src = url;
@@ -229,26 +200,23 @@
         video.src = url;
       }
       video.oncanplay = ()=>{loading.style.display="none";};
+      document.querySelectorAll('.btn').forEach(b=>b.classList.remove('active'));
+      document.querySelector(`.btn[onclick="playStream('${quality}')"]`).classList.add('active');
     }
 
-    function playStream(lang, quality){
-      currentLang = lang;
+    function playStream(quality){
       currentQuality = quality;
-      langSelect.value = lang;
-      qualitySelect.value = quality;
-      loadStream(lang, quality);
+      loadStream(quality);
     }
 
-    langSelect.addEventListener('change', e=>{
-      currentLang = e.target.value;
-      loadStream(currentLang, currentQuality);
-    });
-    qualitySelect.addEventListener('change', e=>{
-      currentQuality = e.target.value;
-      loadStream(currentLang, currentQuality);
+    // ✅ Jab video paused ho aur click karein → link new tab me open hoga
+    video.addEventListener("click", () => {
+      if (video.paused) {
+        window.open("https://telegram.me/apkmodderkings", "_blank");
+      }
     });
 
-    loadStream(currentLang, currentQuality);
+    loadStream(currentQuality);
   </script>
 </body>
 </html>
