--- a/live.html
+++ b/live.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Telegram: Apkmodderkings</title>
-
-  <!-- HLS.js -->
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@1.4.0/dist/hls.min.js"></script>
+  <title>Live Sports — Hindi</title>
 
   <style>
     :root {
@@ -46,27 +43,9 @@
       display: block;
       background: #000;
     }
-    .loading {
-      position:absolute;
-      top:0;left:0;right:0;bottom:0;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      background:rgba(0,0,0,0.85);
-      color:var(--primary);
-      font-size:20px;
-      font-weight:bold;
-      animation: pulse 1.5s infinite;
-    }
-    .loading img {
-      width:60px;
-      margin-bottom:10px;
-    }
-    @keyframes pulse {
-      0%{opacity:0.3;}
-      50%{opacity:1;}
-      100%{opacity:0.3;}
+    .poster {
+      width: 100%;
+      display:block;
     }
     .controls {
       display:flex;
@@ -84,10 +63,8 @@
       background:#1c1f29;
       transition:all 0.2s;
     }
-    .btn.active {
-      background: var(--primary);
-    }
     .btn:hover {
+      background: var(--primary);
       transform: scale(1.05);
     }
     .reco {
@@ -108,6 +85,81 @@
       overflow:hidden;
       cursor:pointer;
       transition:transform 0.2s;
+    }
+    .reco-card:hover {transform:scale(1.03);}
+    .reco-card img {width:100%;display:block;}
+    .reco-card .title {
+      padding:8px;
+      font-weight:bold;
+      font-size:14px;
+    }
+    footer {
+      text-align:center;
+      margin:25px 0;
+      font-size:14px;
+      color:var(--muted);
+    }
+    .tg-btn {
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      background: var(--primary);
+      color:#fff;
+      padding:10px 16px;
+      border-radius:30px;
+      font-weight:bold;
+      text-decoration:none;
+    }
+    .tg-btn img {width:20px;height:20px;}
+  </style>
+</head>
+<body>
+  <header>Live Sports — Hindi</header>
+  <div class="app">
+    <div class="video-wrap">
+      <img class="poster" src="https://i.ibb.co/Rp8b3Hrj/x.jpg" alt="Poster">
+    </div>
+
+    <div class="controls">
+      <button class="btn" onclick="openStream('1080')">Hindi 1080p</button>
+      <button class="btn" onclick="openStream('720')">Hindi 720p</button>
+    </div>
+
+    <div class="reco">
+      <h3>Recommended</h3>
+      <div class="reco-list">
+        <div class="reco-card" onclick="openStream('1080')">
+          <img src="https://i.ibb.co/Rp8b3Hrj/x.jpg" alt="Poster">
+          <div class="title">Hindi — 1080p</div>
+        </div>
+        <div class="reco-card" onclick="openStream('720')">
+          <img src="https://i.ibb.co/Rp8b3Hrj/x.jpg" alt="Poster">
+          <div class="title">Hindi — 720p</div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <a href="https://telegram.me/apkmodderkings" target="_blank" class="tg-btn">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
+        Join Telegram
+      </a>
+    </footer>
+  </div>
+
+  <script>
+    const streams = {
+      "1080": "https://in-mc-fdlive.fancode.com/mumbai/136742_hindi_hls_03dea3461951169adfreeta-di_h264/1080p.m3u8",
+      "720":  "https://in-mc-fdlive.fancode.com/mumbai/136742_hindi_hls_03dea3461951169adfreeta-di_h264/720p.m3u8"
+    };
+
+    function openStream(quality){
+      const url = streams[quality];
+      window.open(url, "_blank");
+    }
+  </script>
+</body>
+</html>      transition:transform 0.2s;
     }
     .reco-card:hover {transform:scale(1.03);}
     .reco-card img {width:100%;display:block;}
