--- a/live.html
+++ b/live.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Live Sports — Hindi</title>
+  <title>apkmodderkings — Live Sports Hindi</title>
 
   <style>
     :root {
-      --bg: #0a0d14;
-      --primary: #e50914;
+      --bg: #0b0e17;
+      --primary: #0088cc; /* Telegram blue */
       --text: #ffffff;
       --muted: #9aa3b2;
+      --card: #1a1f2f;
     }
     body {
       margin: 0;
@@ -19,11 +20,20 @@
       color: var(--text);
     }
     header {
-      text-align: center;
-      padding: 15px;
-      font-size: 22px;
-      font-weight: bold;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:10px;
+      padding:15px;
       background: var(--primary);
+      font-size:22px;
+      font-weight:bold;
+      letter-spacing:0.5px;
+      box-shadow:0 4px 20px rgba(0,0,0,0.5);
+    }
+    header img {
+      width:26px;
+      height:26px;
     }
     .app {
       max-width: 1000px;
@@ -31,17 +41,10 @@
       padding: 10px;
     }
     .video-wrap {
-      position: relative;
-      border-radius: 10px;
+      border-radius: 12px;
       overflow: hidden;
       background: #000;
-      box-shadow: 0 4px 25px rgba(0,0,0,0.6);
-    }
-    video {
-      width: 100%;
-      height: auto;
-      display: block;
-      background: #000;
+      box-shadow: 0 6px 30px rgba(0,0,0,0.6);
     }
     .poster {
       width: 100%;
@@ -50,52 +53,58 @@
     .controls {
       display:flex;
       justify-content:center;
-      gap:12px;
-      margin:15px 0;
+      gap:15px;
+      margin:20px 0;
     }
     .btn {
-      padding:10px 20px;
+      padding:12px 22px;
       border:none;
       border-radius:30px;
       cursor:pointer;
       font-weight:bold;
       color:#fff;
-      background:#1c1f29;
-      transition:all 0.2s;
+      background: var(--card);
+      transition:all 0.25s;
+      font-size:15px;
     }
     .btn:hover {
       background: var(--primary);
-      transform: scale(1.05);
+      transform: translateY(-3px);
+      box-shadow:0 4px 15px rgba(0,0,0,0.4);
     }
     .reco {
-      margin-top:25px;
+      margin-top:30px;
     }
     .reco h3 {
-      margin-bottom:12px;
-      font-size:18px;
+      margin-bottom:15px;
+      font-size:20px;
+      font-weight:bold;
     }
     .reco-list {
       display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-      gap:12px;
+      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+      gap:15px;
     }
     .reco-card {
-      background:#1c1f29;
-      border-radius:8px;
+      background: var(--card);
+      border-radius:10px;
       overflow:hidden;
       cursor:pointer;
-      transition:transform 0.2s;
+      transition:transform 0.25s, box-shadow 0.25s;
     }
-    .reco-card:hover {transform:scale(1.03);}
+    .reco-card:hover {
+      transform:translateY(-5px);
+      box-shadow:0 8px 25px rgba(0,0,0,0.6);
+    }
     .reco-card img {width:100%;display:block;}
     .reco-card .title {
-      padding:8px;
+      padding:12px;
       font-weight:bold;
-      font-size:14px;
+      font-size:15px;
     }
     footer {
       text-align:center;
-      margin:25px 0;
+      margin:35px 0 15px;
       font-size:14px;
       color:var(--muted);
     }
@@ -105,16 +114,26 @@
       gap:8px;
       background: var(--primary);
       color:#fff;
-      padding:10px 16px;
+      padding:12px 20px;
       border-radius:30px;
       font-weight:bold;
       text-decoration:none;
+      font-size:15px;
+      transition:0.25s;
     }
-    .tg-btn img {width:20px;height:20px;}
+    .tg-btn:hover {
+      transform:scale(1.07);
+      box-shadow:0 6px 20px rgba(0,0,0,0.6);
+    }
+    .tg-btn img {width:22px;height:22px;}
   </style>
 </head>
 <body>
-  <header>Live Sports — Hindi</header>
+  <header>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
+    apkmodderkings
+  </header>
+
   <div class="app">
     <div class="video-wrap">
       <img class="poster" src="https://i.ibb.co/Rp8b3Hrj/x.jpg" alt="Poster">
@@ -157,118 +176,6 @@
       const url = streams[quality];
       window.open(url, "_blank");
     }
-  </script>
-</body>
-</html>      transition:transform 0.2s;
-    }
-    .reco-card:hover {transform:scale(1.03);}
-    .reco-card img {width:100%;display:block;}
-    .reco-card .title {
-      padding:8px;
-      font-weight:bold;
-      font-size:14px;
-    }
-    footer {
-      text-align:center;
-      margin:25px 0;
-      font-size:14px;
-      color:var(--muted);
-    }
-    .tg-btn {
-      display:inline-flex;
-      align-items:center;
-      gap:8px;
-      background: var(--primary);
-      color:#fff;
-      padding:10px 16px;
-      border-radius:30px;
-      font-weight:bold;
-      text-decoration:none;
-    }
-    .tg-btn img {width:20px;height:20px;}
-  </style>
-</head>
-<body>
-  <header>Live Sports — Hindi</header>
-  <div class="app">
-    <div class="video-wrap">
-      <video id="video" poster="https://i.ibb.co/Rp8b3Hrj/x.jpg" controls playsinline></video>
-      <div class="loading" id="loading">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
-        Loading...
-      </div>
-    </div>
-
-    <div class="controls">
-      <button class="btn active" onclick="playStream('1080')">Hindi 1080p</button>
-      <button class="btn" onclick="playStream('720')">Hindi 720p</button>
-    </div>
-
-    <div class="reco">
-      <h3>Recommended</h3>
-      <div class="reco-list">
-        <div class="reco-card" onclick="playStream('1080')">
-          <img src="https://i.ibb.co/Rp8b3Hrj/x.jpg" alt="Poster">
-          <div class="title">Hindi — 1080p</div>
-        </div>
-        <div class="reco-card" onclick="playStream('720')">
-          <img src="https://i.ibb.co/Rp8b3Hrj/x.jpg" alt="Poster">
-          <div class="title">Hindi — 720p</div>
-        </div>
-      </div>
-    </div>
-
-    <footer>
-      <a href="https://telegram.me/apkmodderkings" target="_blank" class="tg-btn">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram">
-        Join Telegram
-      </a>
-    </footer>
-  </div>
-
-  <script>
-    const streams = {
-      "1080": "https://in-mc-fdlive.fancode.com/mumbai/136742_hindi_hls_03dea3461951169adfreeta-di_h264/1080p.m3u8",
-      "720":  "https://in-mc-fdlive.fancode.com/mumbai/136742_hindi_hls_03dea3461951169adfreeta-di_h264/720p.m3u8"
-    };
-
-    const video = document.getElementById('video');
-    const loading = document.getElementById('loading');
-    let currentQuality = '1080';
-
-    function loadStream(quality){
-      const url = streams[quality];
-      loading.style.display = "flex";
-      if (video.canPlayType('application/vnd.apple.mpegurl')) {
-        video.src = url;
-      } else if (Hls.isSupported()) {
-        if (window._hls) { window._hls.destroy(); }
-        const hls = new Hls();
-        hls.loadSource(url);
-        hls.attachMedia(video);
-        hls.on(Hls.Events.MANIFEST_PARSED, ()=>{loading.style.display="none";});
-        window._hls = hls;
-      } else {
-        video.src = url;
-      }
-      video.oncanplay = ()=>{loading.style.display="none";};
-      document.querySelectorAll('.btn').forEach(b=>b.classList.remove('active'));
-      document.querySelector(`.btn[onclick="playStream('${quality}')"]`).classList.add('active');
-    }
-
-    function playStream(quality){
-      currentQuality = quality;
-      loadStream(quality);
-    }
-
-    // ✅ Jab video paused ho aur click karein → link new tab me open hoga
-    video.addEventListener("click", () => {
-      if (video.paused) {
-        window.open("https://telegram.me/apkmodderkings", "_blank");
-      }
-    });
-
-    loadStream(currentQuality);
   </script>
 </body>
 </html>
