--- a/live.html
+++ b/live.html
@@ -90,15 +90,15 @@
   <div class="section-title">Available Streams</div>
   <div class="streams">
     <!-- HLS Streams -->
-    <div class="stream-card" onclick="openStream('https://dish.slivcdn.com/hls/live/2020591/TEN3HD/master_1300.m3u8')">
+    <div class="stream-card" onclick="openStream('https://hh-liard-ten.vercel.app')">
       <img src="https://i.ibb.co/jPmh6t8n/x.jpg" alt="1300 kbps">
       <div class="stream-title">1300 kbps</div>
     </div>
-    <div class="stream-card" onclick="openStream('https://dish.slivcdn.com/hls/live/2020591/TEN3HD/master_3500.m3u8')">
+    <div class="stream-card" onclick="openStream('https://hh-liard-ten.vercel.app')">
       <img src="https://i.ibb.co/jPmh6t8n/x.jpg" alt="3500 kbps">
       <div class="stream-title">3500 kbps</div>
     </div>
-    <div class="stream-card" onclick="openStream('https://dish.slivcdn.com/hls/live/2020591/TEN3HD/master_900.m3u8')">
+    <div class="stream-card" onclick="openStream('https://hh-liard-ten.vercel.app')">
       <img src="https://i.ibb.co/jPmh6t8n/x.jpg" alt="900 kbps">
       <div class="stream-title">900 kbps</div>
     </div>
