--- a/live.html
+++ b/live.html
@@ -91,15 +91,15 @@
   <div class="streams">
     <!-- HLS Streams -->
     <div class="stream-card" onclick="openStream('https://hh-liard-ten.vercel.app')">
-      <img src="https://i.ibb.co/jPmh6t8n/x.jpg" alt="1300 kbps">
+      <img src="https://files.catbox.moe/nlxjms.jpg" alt="1300 kbps">
       <div class="stream-title">1300 kbps</div>
     </div>
     <div class="stream-card" onclick="openStream('https://hh-liard-ten.vercel.app')">
-      <img src="https://i.ibb.co/jPmh6t8n/x.jpg" alt="3500 kbps">
+      <img src="https://files.catbox.moe/nlxjms.jpg" alt="3500 kbps">
       <div class="stream-title">3500 kbps</div>
     </div>
     <div class="stream-card" onclick="openStream('https://hh-liard-ten.vercel.app')">
-      <img src="https://i.ibb.co/jPmh6t8n/x.jpg" alt="900 kbps">
+      <img src="https://files.catbox.moe/nlxjms.jpg" alt="900 kbps">
       <div class="stream-title">900 kbps</div>
     </div>
 
